<resources>
    <string name="app_name">Fitness</string>
    <string name="username">Username:</string>
    <string name="username_hint">Please enter the username</string>
    <string name="password">Password:</string>
    <string name="password_hint">Please enter the password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="restore">restore</string>
    <string name="languages">languages</string>
    <string name="copyright">Copyright © Fitness 2024</string>
    <string name="wrond_password">Wrong password!</string>
    <string name="user_does_not_exist">User does not exist!</string>
    <string name="failed_to_read">Failed to read data!</string>
    <string name="both_fields_cannot_empty">Both fields cannot be empty!</string>
    <string name="choose_language">Please Choose Language…</string>
    <string name="invalid_username">This username is not available!</string>
    <string name="username_taken">Username has been taken!</string>
    <string name="unavailable">Unavailable!</string>
    <string name="confirming">Confirming!</string>
    <string name="success">Success!</string>
    <string name="register_success">The registration has been successfully completed!</string>
    <string name="continue_now">continue</string>
    <string name="cannot_be_empty">All fields cannot be empty!</string>
    <string name="email">   Email:    </string>
    <string name="original">Original:       </string>
    <string name="original_hint">Please enter your old password</string>
    <string name="password_one">Password I: </string>
    <string name="password_one_hint">Please enter your new password</string>
    <string name="password_two">Password II:</string>
    <string name="password_two_hint">Please re-enter your password</string>
    <string name="submit">Submit</string>
    <string name="clear_button">Clear</string>
    <string name="email_hint">Please enter your email</string>
    <string name="password_reset_complete">The password has been successfully reset!</string>
    <string name="different_passwords">The provided passwords are different!</string>
    <string name="read_data_success">Successfully read data!</string>
    <string name="wrong_info">Wrong information provided!</string>
    <string name="browse">Browse</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="button">Button</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="delete">Delete</string>
    <string name="user_management">User Management</string>
    <string name="back_calendar"><![CDATA[<-]]></string>
    <string name="forward_calendar"><![CDATA[->]]></string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>
    <string name="name">Name:</string>
    <string name="time">Time</string>
    <string name="change_time">Change Time</string>
    <string name="save_event">Save Event</string>
    <string name="new_event">New Event</string>
    <string name="weekly">Weekly</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="tracking_category">Category</string>
    <string name="title_activity_user_activities">UserActivitiesActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="activities">Activities</string>
    <string name="addExercise">Add Exercise</string>
    <string name="activityType">Activity Type</string>
    <string name="activityType_hint">Enter Activity Type</string>
    <string name="ActivityDuration">Duration</string>
    <string name="durationHint">DurationHint</string>
    <string name="energyExpended">Energy Expended</string>
    <string name="energy_expended_hint">Energy Expended</string>
    <string name="distance">Dsitance</string>
    <string name="distance_hint">Distance Hint</string>
    <string name="date_hint">Enter Date</string>
    <string name="exercise_success">An Exercise has been successfully added</string>
    <string name="meal_type_hint">Enter Meal Type</string>
    <string name="meal_type">Meal Type</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="calories_consumed_hint">Enter Calories Consumed</string>
    <string name="nutritiouns_details">Nutritiouns Details</string>
    <string name="total_carbs">Total Carbs</string>
    <string name="total_carbs_hint">Total Carbs Hint</string>
    <string name="sugar">Sugar</string>
    <string name="sugar_hint">Sugar</string>
    <string name="protein">Protein</string>
    <string name="protein_hint">Proteins</string>
    <string name="meal_success">A Meal successfully Added</string>
    <string name="meals">Meals</string>
    <string name="hydration">Hydration</string>
    <string name="hydration_hint">Add ml</string>
    <string name="hydration_success">"A Hydration Has Been successfully added "</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_hydration">Add Hydration</string>
    <string name="viewDetails">View Details</string>
    <string name="exercise_type_dt">Exercise Type</string>
    <string name="exercise_date_dt">Exercise Date</string>
    <string name="duration_dt">Duration</string>
    <string name="distance_dt">Distance</string>
    <string name="energyExpended_dt">energy Expended</string>
    <string name="hydration_amount">Amount</string>
    <string name="hydration_type_hint">hydaration type</string>
    <string name="hydration_date_hint">Add Date</string>
    <string name="hydration_date">Date</string>
    <string name="edit">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cardName">Card name</string>
    <string name="recommendations">Recommendations</string>
    <string name="text">Test</string>
    <string name="titleReco">Title</string>


</resources>