<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".tracking.AddMealActivity">

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/meal_type"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/input_meal_type"
                android:gravity="center"
                android:hint="@string/meal_type_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/calories_consumed"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:id="@+id/input_calories"
                android:hint="@string/calories_consumed_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/nutritiouns_details"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/total_carbs"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:id="@+id/input_carbs"
                android:hint="@string/total_carbs_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/protein"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:id="@+id/input_proteins"
                android:hint="@string/protein_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/sugar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:id="@+id/input_sugar"
                android:hint="@string/sugar_hint"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/date"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:id="@+id/meal_date_input"
                android:hint="@string/date_hint"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddClick"
            android:text="@string/add"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_above="@+id/input"
        android:orientation="vertical">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="76dp"
            android:src="@drawable/meal" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"/>
</RelativeLayout>