<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".tracking.TrackingActivity">

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">



        <Button
            android:id="@+id/button_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddExClick"
            android:text="@string/activities"/>
        <Button
            android:id="@+id/button_add_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddMealClick"
            android:text="@string/meals"/>
        <Button
            android:id="@+id/button_add_hydration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddHydrationClick"
            android:text="@string/hydration"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_above="@+id/input"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"/>
</RelativeLayout>